# OpenCV

./: hello.py  pyproject.toml
Gui-Features-in-OpenCV/: drawing-function.ipynb  images.ipynb  paint-brush.ipynb  trackbar.ipynb  videos.ipynb
