[project]
name = "opencv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "setuptools>=75.8.0",
    "wheel>=0.45.1",
]
